@@ -4,6 +4,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.7'
 	id 'com.diffplug.spotless' version '6.25.0'
 	id 'jacoco'
+	id 'info.solidsoft.pitest' version '1.19.0-rc.2'
 	id "org.sonarqube" version "7.2.3.7755"
 }
 
@@ -68,6 +69,24 @@ jacocoTestReport {
 		csv.required = false
 		html.required = true
 	}
+}
+
+pitest {
+	junit5PluginVersion = '1.2.3'
+
+	targetClasses = ['com.backend.coapp.service.*']
+	excludedClasses = ['com.backend.coapp.service.genAI.*']
+	targetTests = [
+			'com.backend.coapp.mutation.*',
+			'com.backend.coapp.service.JwtServiceTest',]
+
+	threads = 4
+	timestampedReports = false
+	outputFormats = ['XML', 'HTML']
+	enableDefaultIncrementalAnalysis = true
+	mutationThreshold = 99
+	coverageThreshold = 0
+	jvmArgs = ['--add-opens', 'java.base/java.lang=ALL-UNNAMED', '-XX:+EnableDynamicAgentLoading']
 }
 
 sonar {
